# semantic-aware-gpu-optimization

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: reproducibility.yml  tests.yml
code/: __init__.py  parte_2_hypothesis_validation.py  parte_4_overhead_analysis.py  utils.py
docs/: FAQ.md  INSTALLATION.md  REPRODUCIBILITY.md
scripts/: reproduce_results.sh  scripts_generate_report.py
semantic-aware-gpu-optimization-FINAL/: AUTHORS.md  CONTRIBUTING.md  LICENSE
semantic-aware-gpu-optimization-FINAL/.github/ISSUE_TEMPLATE/: bug_report.md
semantic-aware-gpu-optimization-FINAL/code/: benchmark_simulation.py  config.py  parte_3_semantic_batching.py  requirements.txt
semantic-aware-gpu-optimization-FINAL/data/synthetic/: generate_data.py
semantic-aware-gpu-optimization-FINAL/docs/: ARCHITECTURE.md  METHODOLOGY.md  RESULTS.md  USAGE.md
semantic-aware-gpu-optimization-FINAL/figures/: generate_figures.py
semantic-aware-gpu-optimization-FINAL/paper/: SEMANTIC_AWARE_GPU_OPTIMIZATION_FINAL.tex
semantic-aware-gpu-optimization-FINAL/scripts/: run_all_experiments.sh  scripts_validate_environment.py  setup_environment.sh
semantic-aware-gpu-optimization-FINAL/tests/: __init__.py  conftest.py  test_reproducibility.py
