[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-gpu-opt"
version = "1.0.0"
description = "Semantic-Aware GPU Optimization Framework"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Emmanuel Sánchez Pache", email = "emmanuel@salomoncoral.com"}
]
keywords = [
    "gpu-optimization",
    "semantic-awareness",
    "cache-locality",
    "transformer-inference",
    "energy-efficiency"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.9",
]
notebooks = [
    "jupyter>=1.0",
    "notebook>=6.0",
    "seaborn>=0.11",
]

[project.urls]
Homepage = "https://github.com/emmaneul-rd/semantic-aware-gpu-optimization"
Documentation = "https://github.com/emmaneul-rd/semantic-aware-gpu-optimization"
Repository = "https://github.com/emmaneul-rd/semantic-aware-gpu-optimization.git"
"Bug Tracker" = "https://github.com/emmaneul-rd/semantic-aware-gpu-optimization/issues"

[tool.setuptools]
packages = ["code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=code --cov-report=html"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
